--- a/src/app/pages/categories/category-form/category-form.component.html
+++ b/src/app/pages/categories/category-form/category-form.component.html
@@ -1,3 +1,51 @@
-<p>
-  category-form works!
-</p>
+<nav class="mb-5">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item">
+      <a routerLink="/">Home</a>
+    </li>
+    <li class="breadcrumb-item">
+      <a routerLink="/categories">Categorias</a>
+    </li>
+    <li class="breadcrumb-item active">
+      <a>Nova Categoria</a>
+    </li>
+  </ol>
+</nav>
+
+<div class="row">
+  <div class="col">
+    <h1 class="h2 border-left pl-2">
+      Formulário Categoria
+    </h1>
+  </div>
+  <div class="col">
+    <a class="btn btn-success nav-light float-right" routerLink="new">+ Nova Categoria</a>
+  </div>
+</div>
+
+<form>
+  <div class="card">
+    <div class="card-header">
+      Informações sobre a categoria
+    </div>
+
+    <div class="card-body">
+      <div class="form-row">
+
+        <div class="form-group col-md-4">
+          <label for="name">Nome</label>
+          <input type="text" class="form-control" id="name">
+        </div>
+
+        <div class="form-group col-md-4">
+          <label for="description">Descrição</label>
+          <input type="text" class="form-control" id="description">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <button type="submit" class="btn btn-primary float-left mt-3">Salvar</button>
+
+
+</form>
