--- a/src/app/pages/categories/category-form/category-form.component.html
+++ b/src/app/pages/categories/category-form/category-form.component.html
@@ -15,15 +15,15 @@
 <div class="row">
   <div class="col">
     <h1 class="h2 border-left pl-2">
-      Formulário Categoria
+      {{ pageTitle }}
     </h1>
   </div>
   <div class="col">
-    <a class="btn btn-success nav-light float-right" routerLink="new">+ Nova Categoria</a>
+    <a class="btn btn-success nav-light float-right" [routerLink]="[ '/categories/new' ]">+ Nova Categoria</a>
   </div>
 </div>
 
-<form>
+<form [formGroup]="categoryForm">
   <div class="card">
     <div class="card-header">
       Informações sobre a categoria
