--- a/src/app/pages/categories/category-form/category-form.component.html
+++ b/src/app/pages/categories/category-form/category-form.component.html
@@ -14,7 +14,7 @@
 
 <div class="row">
   <div class="col">
-    <h1 class="h2 border-left pl-2">
+  <h1 class="h2 border-left pl-2">
       {{ pageTitle }}
     </h1>
   </div>
@@ -23,7 +23,7 @@
   </div>
 </div>
 
-<form [formGroup]="categoryForm">
+<form [formGroup]="categoryForm" (submit)="submitForm()">
   <div class="card">
     <div class="card-header">
       Informações sobre a categoria
@@ -34,18 +34,30 @@
 
         <div class="form-group col-md-4">
           <label for="name">Nome</label>
-          <input type="text" class="form-control" id="name">
+          <input type="text" class="form-control" id="name" formControlName="name" minlength="2">
+          <div class="text-danger">
+            <div *ngIf="categoryForm.get('name').invalid || categoryForm.get('name').touched">
+              <div *ngIf="categoryForm.get('name').errors?.required">Campo obrigatório</div>
+              <div *ngIf="categoryForm.get('name').errors?.minlenght">Coloca os caractere irmão</div>
+            </div>
+          </div>
         </div>
 
         <div class="form-group col-md-4">
           <label for="description">Descrição</label>
-          <input type="text" class="form-control" id="description">
+          <input type="text" class="form-control" id="description" formControlName="description" >
         </div>
       </div>
     </div>
   </div>
 
-  <button type="submit" class="btn btn-primary float-left mt-3">Salvar</button>
+  <div class="alert alert-danger" *ngIf="serverErrorMessages">
+    <strong>Erro no servidor</strong>
+    <ul>
+      <li *ngFor="let error of serverErrorMessages">{{ error }}</li>
+    </ul>
+  </div>
 
+  <button [disabled]="formSubmitting || categoryForm.invalid" type="submit" class="btn btn-primary float-left mt-3">Salvar</button>
 
 </form>
