--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
         <a class="nav-link" href="#" routerLink="relatories">Relatórios</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" href="#" routerLink="relatories">Lançamentos</a>
+        <a class="nav-link" href="#" routerLink="entries">Lançamentos</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" href="#" routerLink="categories"> Categorias</a>
