--- a/src/app/pages/entries/entry-list/entry-list.component.html
+++ b/src/app/pages/entries/entry-list/entry-list.component.html
@@ -32,7 +32,7 @@
           <strong>{{ entry.name }}</strong><br>
           <small class="text-success">{{ entry.date }}</small><br>
           <small>{{ entry.description }}</small><br>
-          <small class="text-danger">{{ entry.category.name }}</small>
+          <!-- <small class="text-danger">{{ entry.category.name }}</small> -->
       </td>
       <td>
         <button class="btn btn-primary mr-2" [routerLink]="[ 'edit', entry.id ]">Editar</button>
