--- a/src/app/pages/entries/entry-form/entry-form.component.html
+++ b/src/app/pages/entries/entry-form/entry-form.component.html
@@ -1,3 +1,6 @@
+<app-bread-crumb
+[items]="[{text: 'Lançamentos', link: 'entries'},{text: pageTitle}]"></app-bread-crumb>
+
 <form [formGroup]="entryForm" (submit)="submitForm()">
 
   <div class="form-row">
