--- a/src/app/pages/entries/entry-list/entry-list.component.html
+++ b/src/app/pages/entries/entry-list/entry-list.component.html
@@ -1,12 +1,5 @@
-<nav class="mb-5">
-  <ol class="breadcrumb">
-    <li class="breadcrumb-item">
-      <a routerLink="/">Home</a>
-    </li>
-    <li class="breadcrumb-item active">
-      Lançamentos
-  </ol>
-</nav>
+<app-bread-crumb
+[items]="[{text: pageTitle}]"></app-bread-crumb>
 
 <div class="row">
   <div class="col">
