--- a/src/app/pages/categories/category-form/category-form.component.html
+++ b/src/app/pages/categories/category-form/category-form.component.html
@@ -12,7 +12,7 @@
   </div>
 </div>
 
-<form [formGroup]="categoryForm" (submit)="submitForm()">
+<form [formGroup]="resourceForm" (submit)="submitForm()">
   <div class="card">
     <div class="card-header">
       Informações sobre a categoria
@@ -25,9 +25,9 @@
           <label for="name">Nome</label>
           <input type="text" class="form-control" id="name" formControlName="name" minlength="2">
           <div class="text-danger">
-            <div *ngIf="categoryForm.get('name').invalid || categoryForm.get('name').touched">
-              <div *ngIf="categoryForm.get('name').errors?.required">Campo obrigatório</div>
-              <div *ngIf="categoryForm.get('name').errors?.minlenght">Coloca os caractere irmão</div>
+            <div *ngIf="resourceForm.get('name').invalid || resourceForm.get('name').touched">
+              <div *ngIf="resourceForm.get('name').errors?.required">Campo obrigatório</div>
+              <div *ngIf="resourceForm.get('name').errors?.minlenght">Coloca os caractere irmão</div>
             </div>
           </div>
         </div>
@@ -47,6 +47,6 @@
     </ul>
   </div>
 
-  <button [disabled]="formSubmitting || categoryForm.invalid" type="submit" class="btn btn-primary float-left mt-3">Salvar</button>
+  <button [disabled]="formSubmitting || resourceForm.invalid" type="submit" class="btn btn-primary float-left mt-3">Salvar</button>
 
 </form>
