adjust breadcrumb href

--- a/src/app/pages/entries/entry-form/entry-form.component.html
+++ b/src/app/pages/entries/entry-form/entry-form.component.html
@@ -1,5 +1,5 @@
 <app-bread-crumb
-[items]="[{text: 'Lançamentos', link: 'entries'},{text: pageTitle}]"></app-bread-crumb>
+[items]="[{text: 'Lançamentos', link: '/entries'},{text: pageTitle}]"></app-bread-crumb>
 
 <form [formGroup]="resourceForm" (submit)="submitForm()">
 
