--- a/src/app/pages/categories/category-list/category-list.component.html
+++ b/src/app/pages/categories/category-list/category-list.component.html
@@ -20,7 +20,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let category of items">
+    <tr *ngFor="let category of resources">
       <td>
           <strong>{{ category.name }}</strong><br>
           <small>{{ category.description }}</small>
