--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,4 @@
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-  <a class="navbar-brand" routerLink="/">Finansys</a>
-  <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
-      aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="collapsibleNavId">
+<app-navigation-pane>
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" href="#" routerLink="relatories">Relatórios</a>
@@ -16,9 +10,8 @@
         <a class="nav-link" href="#" routerLink="categories"> Categorias</a>
       </li>
     </ul>
-  </div>
-</nav>
-<br>
+</app-navigation-pane>
+
 <div class="container-fluid">
   <router-outlet></router-outlet>
 </div>
